# cfa-rehearsal

./: README.md  main.py  pyproject.toml
backend/: data.py  model.py
frontend/: App.py  ExamTimer.py  MainMenu.py  MockExam.py  TimeDisplay.py  menu.tcss  textualUI.py
